--- a/JavaScript/External/ClipBoard.html
+++ b/JavaScript/External/ClipBoard.html
@@ -51,6 +51,20 @@
           margin-bottom: 1rem;
         }
       }
+      button {
+        width: 100%;
+        padding: 10px;
+        color: #fff;
+        background-color: #000;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        margin-bottom: 1rem;
+      }
+
+      button:hover {
+        background-color: #333;
+      }
 
       button:hover {
         background-color: #333;
